loader for discussion CD now correctly aligned

--- a/client/landing/stylus/app.contentdisplays.styl
+++ b/client/landing/stylus/app.contentdisplays.styl
@@ -1014,6 +1014,10 @@ div.kdview.activity-item.discussion.content-display-main-section
         a.all-count
           noTextDeco()
 
+        .opinion-loader
+          height 100%
+          vertical-align middle
+
     div.content-display-main-section.opinion-form-footer
       margin-left                                 90px
       margin-top                                  20px
